[package]
name = "path-ext"
version = "0.1.0"
authors = ["DarkSky <darksky2048@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
keywords = ["path", "trait", "utils"]
description = "Provide convenient methods for path operations"
repository = "https://github.com/darkskygit/path-ext"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
walkdir = "2.3.1"
