[package]
name = "path-ext"
version = "0.1.1"
authors = ["DarkSky <darksky2048@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
keywords = ["path", "trait", "utils"]
description = "Provide convenient methods for path operations"
repository = "https://github.com/darkskygit/path-ext"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
path-slash = "0.2.1"
walkdir = "2.5.0"
